First solution